--- a/server/system/types/types.yaml
+++ b/server/system/types/types.yaml
@@ -8,6 +8,7 @@ types:
     noIdField: true
   User:
     labelResourceType: user
+  Order: {}
   DalConnection:
   DalSensitivityLevel:
   Application:
