--- a/server/compose/service/record_actions.yaml
+++ b/server/compose/service/record_actions.yaml
@@ -70,6 +70,9 @@ actions:
   - action: delete
     log: "deleted {{record}}"
 
+  - action: patch
+    log: "patched {{record}}"
+
   - action: undelete
     log: "undeleted {{record}}"
 
