--- a/lib/vue/package.json
+++ b/lib/vue/package.json
@@ -50,7 +50,7 @@
     "v-photoswipe": "^1.0.3-1",
     "vue-color": "^2.8.1",
     "vue-echarts": "^6.2.3",
-    "vue-select": "^3.4.0",
+    "vue-select": "3.20.2",
     "vue-swatches": "^1.0.4",
     "vue2-ace-editor": "^0.0.15",
     "vuedraggable": "^2.23.0",
