--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,14 @@
 name: "a"
 
+# on:
+#   push:
+#     tags:
+#       - '**'
+
 on:
   push:
-    tags:
-      - '**'
+    branches:
+      - '202[2-9].[39].x'
 
 env:
   BUILD_OS: linux
