--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -316,41 +316,41 @@ jobs:
 # This is where it all comes together
 
 
-  release:
-    name: "Corteza (${{ matrix.os }})"
-    runs-on: bn03
-    needs: [ server-release, client-web-aio-release ]
-    strategy:
-      fail-fast: true
-      matrix:
-        os: [ "linux" ]
-    env:
-      ENDPOINT: https://releases.cortezaproject.org/files
-      RELEASE_SFTP_KEY: ${{ secrets.RELEASE_SFTP_KEY }}
-      RELEASE_SFTP_URI: ${{ secrets.RELEASE_SFTP_URI }}
-    steps:
-      - run: echo "BUILD_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-      - uses: actions/checkout@v3
-      - name: "Download"
-        run: |
-          curl --silent --location "${{ env.RELEASE_BASE_URL }}/corteza-server-${{ env.BUILD_VERSION }}-${{ matrix.os }}-amd64.tar.gz" | \
-            tar -xzmok -C .
-          mv corteza-server dist
-          rm -rf dist/webapp
-          mkdir dist/webapp
-          curl --silent --location "${{ env.RELEASE_BASE_URL }}/corteza-webapp-${{ env.BUILD_VERSION }}.tar.gz" | \
-            tar -xzmok -C dist/webapp
-      - name: "Pack"
-        run: |
-          tar -C dist -czf corteza-${{ env.BUILD_VERSION }}-linux-amd64.tar.gz $(dir dist)
-      - name: "Upload"
-        run: |
-          echo ${{ env.RELEASE_SFTP_KEY }} | base64 -d > .upload-rsa
-          chmod 0400 .upload-rsa
-          echo "put corteza-${{ env.BUILD_VERSION }}-linux-amd64.tar.gz" | \
-            sftp -q -o "StrictHostKeyChecking no" -i .upload-rsa ${{ env.RELEASE_SFTP_URI }}
-          rm -f .upload-rsa
-        if: ${{ !env.ACT }}
+  # release:
+  #   name: "Corteza (${{ matrix.os }})"
+  #   runs-on: bn03
+  #   needs: [ server-release, client-web-aio-release ]
+  #   strategy:
+  #     fail-fast: true
+  #     matrix:
+  #       os: [ "linux" ]
+  #   env:
+  #     ENDPOINT: https://releases.cortezaproject.org/files
+  #     RELEASE_SFTP_KEY: ${{ secrets.RELEASE_SFTP_KEY }}
+  #     RELEASE_SFTP_URI: ${{ secrets.RELEASE_SFTP_URI }}
+  #   steps:
+  #     - run: echo "BUILD_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+  #     - uses: actions/checkout@v3
+  #     - name: "Download"
+  #       run: |
+  #         curl --silent --location "${{ env.RELEASE_BASE_URL }}/corteza-server-${{ env.BUILD_VERSION }}-${{ matrix.os }}-amd64.tar.gz" | \
+  #           tar -xzmok -C .
+  #         mv corteza-server dist
+  #         rm -rf dist/webapp
+  #         mkdir dist/webapp
+  #         curl --silent --location "${{ env.RELEASE_BASE_URL }}/corteza-webapp-${{ env.BUILD_VERSION }}.tar.gz" | \
+  #           tar -xzmok -C dist/webapp
+  #     - name: "Pack"
+  #       run: |
+  #         tar -C dist -czf corteza-${{ env.BUILD_VERSION }}-linux-amd64.tar.gz $(dir dist)
+  #     - name: "Upload"
+  #       run: |
+  #         echo ${{ env.RELEASE_SFTP_KEY }} | base64 -d > .upload-rsa
+  #         chmod 0400 .upload-rsa
+  #         echo "put corteza-${{ env.BUILD_VERSION }}-linux-amd64.tar.gz" | \
+  #           sftp -q -o "StrictHostKeyChecking no" -i .upload-rsa ${{ env.RELEASE_SFTP_URI }}
+  #         rm -f .upload-rsa
+  #       if: ${{ !env.ACT }}
 
 ########################################################################################################################
 ########################################################################################################################
@@ -409,10 +409,10 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - { context: "extra/server-discovery",     image: "cortezaproject/corteza-server-discovery" }
-          - { context: "client/web",                 image: "cortezaproject/corteza-webapp" }
-          - { context: "server",                     image: "cortezaproject/corteza-server" }
-          - { context: ".",                          image: "cortezaproject/corteza" }
+          - { context: "extra/server-discovery",     image: "sijianbn/corteza-server-discovery" }
+          - { context: "client/web",                 image: "sijianbn/corteza-webapp" }
+          - { context: "server",                     image: "sijianbn/corteza-server" }
+          - { context: ".",                          image: "sijianbn/corteza" }
 
     steps:
       - uses: actions/checkout@v3
