--- a/client/web/Dockerfile
+++ b/client/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM alpine:3 as build-stage
 
 ARG VERSION=2022.9.0
-ARG CORTEZA_CLIENT_WEB_AIO_PKG=http://ec2-44-213-133-184.compute-1.amazonaws.com:9100/files/corteza-webapp-${VERSION}.tar.gz
+ARG CORTEZA_CLIENT_WEB_AIO_PKG=http://ec2-52-42-33-180.us-west-2.compute.amazonaws.com:9100/files/corteza-webapp-${VERSION}.tar.gz
 
 # Download package
 ADD $CORTEZA_CLIENT_WEB_AIO_PKG /tmp
