--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,7 +113,7 @@ jobs:
 
   lib-test:
     name: "Library test (${{ matrix.lib }})"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         lib: [ "js", "vue" ]
@@ -137,7 +137,7 @@ jobs:
 
   lib-build-and-publish:
     name: "Publish libraries (${{ matrix.lib }})"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     needs: [ lib-test ]
     strategy:
       matrix:
@@ -180,7 +180,7 @@ jobs:
 
   client-web-test:
     name: "Web client test (${{ matrix.app }})"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: true
       matrix: { app: [ admin, compose, discovery, privacy, reporter, one, workflow ] }
@@ -209,7 +209,7 @@ jobs:
 
   client-web-release:
     name: "Web client (${{ matrix.app }})"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: true
       matrix: { app: [ admin, compose, discovery, privacy, reporter, one, workflow ] }
@@ -251,7 +251,7 @@ jobs:
 
   client-web-aio-release:
     name: "Web clients (all-in-one release)"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     needs: [ client-web-release ]
     env:
       RELEASE_SFTP_KEY: ${{ secrets.RELEASE_SFTP_KEY }}
