--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ env:
 jobs:
   server-test:
     name: "Server tests"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     env:
       GOFLAGS: -mod=readonly
     steps:
@@ -48,7 +48,7 @@ jobs:
   # we'll do this in parallel with tests to gain a few seconds
   server-web-console-build:
     name: "Server Web Console Build"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -77,7 +77,7 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - { runsOn: "bn03", os: "linux" }
+          - { runsOn: "ubuntu-20.04", os: "linux" }
           # - { runsOn: "macos-latest",  os: "darwin" }
     runs-on: ${{ matrix.runsOn }}
     needs: [ server-web-console-build, server-test ]
@@ -318,7 +318,7 @@ jobs:
 
   release:
     name: "Corteza (${{ matrix.os }})"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     needs: [ server-release, client-web-aio-release ]
     strategy:
       fail-fast: true
@@ -358,7 +358,7 @@ jobs:
 
   extra-server-discovery-test:
     name: "Discovery Server test"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     steps:
       - name: "Placeholder"
         run: echo "@todo add tests"
@@ -369,7 +369,7 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - { runsOn: "bn03", os: "linux" }
+          - { runsOn: "ubuntu-20.04", os: "linux" }
           # - { runsOn: "macos-latest",  os: "darwin" }
     runs-on: ${{ matrix.runsOn }}
     needs: [ extra-server-discovery-test ]
@@ -400,7 +400,7 @@ jobs:
   docker-images:
     name: "Docker image ${{ matrix.image }}"
 
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     needs:
       - server-release
       - client-web-aio-release
@@ -461,7 +461,7 @@ jobs:
 
   notify:
     name: "Send matrix release notification"
-    runs-on: bn03
+    runs-on: ubuntu-20.04
     needs: [ docker-images, release ]
     steps:
       - uses: actions/checkout@v3
